Fixed an issue where tables weren't resizing to fit the screen on mobile Chrome-based browsers.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,7 @@
 		padding: 0 3% 15%;
 	}
 	.markdown-body table {
+		width: auto;
 		max-width: 106%;
 		margin-left: -3%;
 		margin-right: -3%;
